hphp/test/zend/good/ext/mbstring/tests/mb_ereg_replace-compat-08.php
<?php
/* (counterpart: ext/standard/tests/reg/011.phpt) */
  $a="abc123";
  echo mb_ereg_replace("123","def\\0ghi",$a);
?>